@@ -2,39 +2,54 @@
   "id": "tahlan_aetnos",
   "specClass": "projectile",
   "projectileSpecId": "tahlan_aetnos_shot",
-  "everyFrameEffect": "data.scripts.weapons.tahlan_AetnosMuzzleFlashScript",
   "type": "BALLISTIC",
   "size": "MEDIUM",
+  "everyFrameEffect": "data.scripts.weapons.tahlan_AetnosMuzzleFlashScript",
   "turretSprite": "graphics/tahlan/weapons/tahlan_aetnos_turret_base.png",
   "turretGunSprite": "graphics/tahlan/weapons/tahlan_aetnos_turret_recoil.png",
   "hardpointSprite": "graphics/tahlan/weapons/tahlan_aetnos_hp_base.png",
   "hardpointGunSprite": "graphics/tahlan/weapons/tahlan_aetnos_hp_recoil.png",
   "renderAboveAllWeapons": 0,
   "visualRecoil": 6,
+  "renderHints": [
+    RENDER_BARREL_BELOW
+  ],
   "turretOffsets": [
-    20.5,
-    0
+    21.5,
+    3,
+    21.5,
+    -3
   ],
   "turretAngleOffsets": [
+    0,
     0
   ],
   "hardpointOffsets": [
-    18.5,
-    0
+    20.5,
+    3,
+    20.5,
+    -3
   ],
   "hardpointAngleOffsets": [
+    0,
     0
   ],
   "barrelMode": "ALTERNATING",
   "animationType": "MUZZLE_FLASH",
-  "renderHints":[RENDER_BARREL_BELOW],
-  "muzzleFlashSpec":{"length":30.0,   # only used if animationType = MUZZLE_FLASH
-					   "spread":24,
-					   "particleSizeMin":12.0,
-					   "particleSizeRange":32.0,
-					   "particleDuration":0.13,
-					   "particleCount":25,
-					  "particleColor":[220,160,115,155]},
+  "muzzleFlashSpec": {
+    "length": 30,
+    "spread": 24,
+    "particleSizeMin": 12,
+    "particleSizeRange": 32,
+    "particleDuration": 0.13,
+    "particleCount": 25,
+    "particleColor": [
+      220,
+      160,
+      115,
+      155
+    ]
+  },
   "textureType": ROUGH,
   "fireSoundTwo": "tahlan_aetnos_fire"
 }
