@@ -8,7 +8,7 @@ Amboss Heavy Autocannon,tahlan_amboss,2,0.8,8000,700,,300,,50,12,20,,,,HIGH_EXPL
 PEPPA Cannon,tahlan_ppa,2,0.6,8000,800,,200,100,50,8,22,,,,FRAGMENTATION,66.6,,0,1.6,5,0.1,0,0,0,0,,1200,,,100,,"energy10, utility15, remnant, rare_bp",,Common,,General,,,,,Direct hits to armor or hull have a chance of causing additional arcing emp damage,,,,
 Pastella Blaster,tahlan_pastel,3,0.2,8000,450,,300,,10,14,14,,,,ENERGY,270,,0.3,0.75,4,0.15,0,5,0.2,2,,1000,,,30,,"energy15, SR, rare_bp",,Common,,General,,,,,,,"%s: If more than one weapon with this trait is installed, it will %s of the ship.",Mild Interferences|reduce the flux dissipation,
 Breaker Rotary Cannon,tahlan_breaker,3,0.2,4000,800,,200,,30,14,20,48,1.6,16,HIGH_EXPLOSIVE,220,,0.1,0.1,4,0.2,0,12,2,6,,800,,,50,,"he18, rare_bp",,Common,,Anti Armor,,,,,,,,,
-Aetnos Strike Cannon,tahlan_aetnos,2,,750,800,,300,,15,20,13,,,,HIGH_EXPLOSIVE,300,,0,3.6,3,0.2,0,15,3,8,,800,,,30,,"he13, lowtech_bp",,Common,,Anti Armor,,,,,,,,,
+Aetnos Strike Cannon,tahlan_aetnos,2,,750,800,,300,,15,20,13,,,,HIGH_EXPLOSIVE,300,,0,2.3,2,0.2,0,15,5,10,,800,,,30,,"he13, lowtech_bp",,Common,,Anti Armor,,,,,,,,,
 Ryza-type Plasma Cannon,tahlan_ryza,3,0.2,8000,700,,1200,,200,9,28,,,,ENERGY,1620,,0.5,3,,,0,5,1,2.5,,900,,,500,"STRIKE, USE_VS_FRIGATES","energy20, rare_bp",,Common,,Suppression,,,,,Causes an additional %s energy damage as area of effect explosion on impact.,120,,,
 Mezoa-type Plasma Gun,tahlan_mezoa,3,0.2,5000,600,,800,,100,12,14,,,,ENERGY,1080,,0.5,3,,,0,5,1,2.5,,750,,,500,"STRIKE, USE_VS_FRIGATES","energy15, rare_bp",,Common,,Suppression,,,,,Causes an additional %s energy damage as area of effect explosion on impact.,80,,,
 Vesuvio Magcannon,tahlan_vesuvio,3,0.2,4000,800,,100,100,20,8,22,,,,KINETIC,110,,0,0.25,,,0,6,0.25,3,,1400,,,400,,"kinetic16, remnant, rare_bp",,Common,,Anti Shield,,,,,Direct hits to armor or hull have a %s chance of causing an additional %s arcing energy and emp damage,20% | 100,,,
